# IndieStudio

./: .gitignore  CMakeLists.txt  cmake_install.cmake
Errors/: Error.hpp
include/: Indie.hpp
include/Part/: IPart.hpp  PreScene.hpp
include/Part/Game/: Game.hpp
include/Part/Game/maps/: BasicMap.hpp  IMap.hpp
include/Part/Game/maps/block/: Animation.hpp  Bombe.hpp  Breakable.hpp  Ground.hpp  IBlock.hpp  Metal.hpp  Rock.hpp
include/Part/Game/maps/block/bonus/: BombeUp.hpp  IBonus.hpp  PowerUp.hpp  SpeedUp.hpp
include/Part/Game/player/: ComputerAi.hpp  Human.hpp  IPlayer.hpp
include/Part/Menu/: Arrow.hpp  ChooseMap.hpp  Config.hpp  Credit.hpp  HowToPlay.hpp  IPartMenu.hpp  Menu.hpp
include/def/: def.hpp
include/env/: env.hpp
include/graphic/: Event.hpp  Graphique.hpp  Sound.hpp
include/multiplayer/: Client.hpp  Server.hpp
include/save/: save.hpp
media/animation/: spider.b3d  spider.txt
media/bombe/: bombe.txt
media/bombeUp/: bombeUp.txt
media/caisse/: box.txt
media/character1/: char.txt  config.txt
media/character2/: char.txt  config.txt
media/character3/: char.txt  config.txt
media/character4/: char.txt
media/fireUp/: fireUp.txt
media/map/: map1.txt  map2.txt  map3.txt
media/metalWall/: metal.txt
media/rockWall/: rock.txt
media/sol/: sol.txt
media/speedUp/: speedUp.txt
media/wallPass/: wallPass.txt
src/: Indie.cpp  main.cpp
src/Part/: PreScene.cpp
src/Part/Game/: Game.cpp
src/Part/Game/maps/: BasicMap.cpp
src/Part/Game/maps/Block/: Animation.cpp  Bombe.cpp  Breakable.cpp  Ground.cpp  Metal.cpp  Rock.cpp
src/Part/Game/maps/Block/Bonus/: BombeUp.cpp  PowerUp.cpp  SpeedUp.cpp
src/Part/Game/player/: ComputerAi.cpp  Human.cpp
src/Part/Menu/: Menu.cpp
src/Part/Menu/PartMenu/: ChooseMap.cpp  Config.cpp  Credit.cpp  HowToPlay.cpp
src/env/: env.cpp
src/graphic/: Graphique.cpp  Sound.cpp
src/multiplayer/: Client.cpp  Server.cpp  cmain.cpp  main.cpp
src/save/: save.cpp
test/: FindIrrlicht.cmake
